--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
    <body>
-      <p> This is a Branching model </p>
+      <p> This is a Branching model
+      	  Feature2 branch added </p>
    </body>
 </html>
