Hotfix is merged

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
    <body>
       <p> This is a Branching model
-      	  Feature2 branch added </p>
+      	  Feature2 branch added
+      	  Feature1 branch is updated
+      	  Issue has been Fixed
+      </p>
    </body>
 </html>
